Third extra commit.

--- a/src/main/resources/templates/errors/error404.html
+++ b/src/main/resources/templates/errors/error404.html
@@ -406,7 +406,7 @@
                 Схоже, ми не можемо знайти цю адресу.<br>
                 Можливо, вона вже орендована? Але не хвилюйтесь, тут ще багато цікавих місць!
             </div>
-            <button class="btn-custom" onclick="window.location.href='/main'"><span>На головну</span></button>
+            <button class="btn-custom" onclick="window.location.href='/home'"><span>На головну</span></button>
         </div>
     </div>
 </main>
